--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -50,13 +50,9 @@
         cursor: default;
         font-size: 1.3em;
         margin-top: 30px;
-        background-color: #80ade52f;
+        background-color: #a5c6ee2f;
         border-radius: 2px;
         transition: all 0.4s;
-
-        // &:last-child {
-        //     margin-right: 0;
-        // }
 
         &:hover {
             color: color.$blue;
